--- a/app/app.global.css
+++ b/app/app.global.css
@@ -4,6 +4,10 @@
  */
 @import "~font-awesome/css/font-awesome.css";
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   position: relative;
   color: black;
@@ -12,18 +16,33 @@ body {
   /* background-image: linear-gradient(45deg, rgba(0, 216, 255, 0.5) 10%, rgba(0, 1, 127, 0.7)); */
   font-family: Arial, Helvetica, Helvetica Neue, serif;
   overflow-y: hidden;
+  font-size: 1.6rem;
 }
 
-h2 {
+h1, h2, h3, h4, h5 {
   margin: 0;
-  font-size: 2.25rem;
   font-weight: bold;
-  letter-spacing: -0.025em;
   color: black;
 }
 
+h1 {
+  font-size: 3.2rem;
+}
+
+h2 {
+  font-size: 2.8rem;
+}
+
+h3 {
+  font-size: 2.4rem;
+}
+
+h4 {
+  font-size: 2.0rem;
+}
+
 p {
-  font-size: 24px;
+  font-size: 1.2rem;
 }
 
 li {
@@ -40,4 +59,8 @@ a:hover {
   opacity: 1;
   text-decoration: none;
   cursor: pointer;
+}
+
+button {
+  font-size: 1.2rem;
 }
