--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -21,6 +21,14 @@ $xxl: 3.8rem;
     }
 }
 
+.not-selectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 
 .items {
     & .item {
