--- a/app/app.global.css
+++ b/app/app.global.css
@@ -10,19 +10,22 @@ html {
 
 body {
   position: relative;
-  color: black;
+  color: #ccc;
   height: 100vh;
+  min-width: 650px;
+  background-color: rgb(41, 41, 41);
   /* background-color: #232c39; */
   /* background-image: linear-gradient(45deg, rgba(0, 216, 255, 0.5) 10%, rgba(0, 1, 127, 0.7)); */
-  font-family: Arial, Helvetica, Helvetica Neue, serif;
+  /* font-family: Arial, Helvetica, Helvetica Neue, serif; */
+  font-family: 'PT Sans', sans-serif;
   overflow-y: hidden;
   font-size: 1.6rem;
 }
 
 h1, h2, h3, h4, h5 {
   margin: 0;
-  font-weight: bold;
-  color: black;
+  font-weight: 400;
+  color: #eee;
 }
 
 h1 {
@@ -39,6 +42,14 @@ h3 {
 
 h4 {
   font-size: 2.0rem;
+}
+
+hr {
+  border: none;
+  height: 2px;
+  background-color: #555;
+  box-shadow: 0 0 3px black;
+  outline: 0;
 }
 
 p {
@@ -61,6 +72,12 @@ a:hover {
   cursor: pointer;
 }
 
-button {
-  font-size: 1.2rem;
+fieldset{
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+input{
+  outline: 0;
 }
