--- a/app/styles/native.scss
+++ b/app/styles/native.scss
@@ -15,6 +15,7 @@
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome and Opera */
     font-size: 14px;
+    font-weight: bold;
     color: grey;
     line-height: 40px;
     text-align: center;
