--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -17,6 +17,7 @@ $grpc-grid-border-width: 2px;
 @import './textbox.scss';
 @import './TableGrid.scss';
 @import './react-tabs.scss';
+@import './charfer.scss';
 
 .container {
     display: block;
