--- a/app/app.global.css
+++ b/app/app.global.css
@@ -19,7 +19,7 @@ body {
   /* font-family: Arial, Helvetica, Helvetica Neue, serif; */
   font-family: 'PT Sans', sans-serif;
   overflow-y: hidden;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 h1, h2, h3, h4, h5 {
@@ -80,4 +80,8 @@ fieldset{
 
 input{
   outline: 0;
+}
+
+pre {
+  font-size: 12px;
 }
