--- a/app/styles/component/list-item.scss
+++ b/app/styles/component/list-item.scss
@@ -1,3 +1,18 @@
+.items {
+  & .item {
+      display: block;
+      width: 100%;
+      height: 20px;
+      border-bottom: 1px solid grey;
+      padding: $sm;
+
+      &:hover{
+          cursor: pointer;
+          background: grey;
+      }
+  }
+}
+
 .item{
   display: block;
   box-sizing: border-box;
