Added socket helper

--- a/app/styles/component/scrollbar.scss
+++ b/app/styles/component/scrollbar.scss
@@ -9,7 +9,7 @@
 ::-webkit-scrollbar-thumb {
   background: #e1e1e1;
   border: 14px none #ffffff;
-  border-radius: 52px 52px 0 0;
+  // border-radius: 52px 52px 0 0;
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #ffffff;
@@ -20,7 +20,7 @@
 ::-webkit-scrollbar-track {
   background: #666666;
   border: 2px none #ffffff;
-  border-radius: 52px 52px 0 0;
+  // border-radius: 52px 52px 0 0;
 }
 ::-webkit-scrollbar-track:hover {
   background: #666666;
