--- a/app/styles/component/button.scss
+++ b/app/styles/component/button.scss
@@ -1,3 +1,16 @@
+@-webkit-keyframes rainbow {
+  0% {
+    border-color: hsl(177, 100%, 50%);
+    box-shadow: 0 0 20px 1px hsl(197, 100%, 62%);
+    background-color: hsl(197, 100%, 50%);
+  }
+  100% {
+    border-color: hsl(278, 100%, 60%);
+    box-shadow: 0 0 20px 1px hsl(277, 100%, 63%);
+    background-color: hsl(276, 100%, 50%);
+  }
+}
+
 .buttons > button{
     display: inline-block;
     margin-right: $xs;
@@ -40,6 +53,24 @@
 
   &:disabled{
     background-color: darken(rgb(194, 194, 194), 0.1);
+  }
+
+  &.rainbow {
+
+    &:hover {
+      -webkit-animation-play-state: paused;
+    }
+
+    &:active {
+      color: rgb(221, 221, 221);
+    }
+    
+    border: 4px solid hsl(0, 0%, 75%);
+    box-shadow: 0 0 20px 1px hsl(0, 0%, 89%);
+    background-color: hsl(0, 0%, 76%);
+    color: white;
+    text-shadow: 0 0 20px white;
+    -webkit-animation: rainbow 3s infinite alternate;
   }
 
 }
