--- a/app/styles/container/grpc.scss
+++ b/app/styles/container/grpc.scss
@@ -22,6 +22,15 @@
   border-right: $grpc-grid-border-width solid $grpc-grid-border-color;
   // max-height: 400px;
   overflow-y: auto;
+
+  & h3{
+    margin-top: 0;
+    margin-bottom: $xs;
+  }
+
+  & hr{
+    margin: $xxs 0;
+  }
 }
 
 pre.response-text {
