--- a/app/styles/component/button.scss
+++ b/app/styles/component/button.scss
@@ -29,6 +29,16 @@
   box-shadow: 0;
   transition: box-shadow cubic-bezier(0.165, 0.84, 0.44, 1) .1s;
 
+  &.button-block {
+    width: 100%;
+  }
+
+  &.button-compact {
+    width: auto;
+    min-width: 0;
+    padding: 0 10px;
+  }
+
   &.big {
     width: 100%;
     height: 75px;
