--- a/app/styles/component/textbox.scss
+++ b/app/styles/component/textbox.scss
@@ -1,7 +1,12 @@
 input {
 
+  &:disabled:hover,
+  &:disabled {
+    background: rgb(156, 156, 156);
+  }
+
   box-sizing: border-box;
-  background: rgb(190, 190, 190);
+  background: rgb(221, 221, 221);
   border: 2px solid transparent;
   border-radius: 6px;
   padding: $xs $xs;
@@ -14,7 +19,7 @@ input {
 
   &:focus,
   &:hover{
-    background: rgb(250, 250, 250);
+    background: rgb(255, 255, 255);
   }
 
   &.long{
